remove pageabel when get all product and by category